--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
-    },
+      "@/*": ["./app/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -30,7 +30,7 @@
     "cypress.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
