--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
@@ -22,16 +23,20 @@
     "eslint-config-next": "13.4.12",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "negotiator": "^0.6.3",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/negotiator": "^0.6.1",
+    "daisyui": "^3.5.1",
     "eslint": "8.46.0",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.1",
