--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./app/*"]
+      "@/*": ["./app/*"],
+      "~/*": ["./*"]
     }
   },
   "include": [
