--- a/package.json
+++ b/package.json
@@ -31,15 +31,18 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "theme-change": "^2.5.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@heroicons/react": "^2.0.18",
     "@tailwindcss/typography": "^0.5.9",
     "@types/negotiator": "^0.6.1",
     "daisyui": "^3.5.1",
     "eslint": "8.46.0",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.5.0",
     "simple-git-hooks": "^2.9.0"
   },
   "simple-git-hooks": {
