feat: add contentlayer to support mdx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     ],
     "paths": {
       "@/*": ["./app/*"],
-      "~/*": ["./*"]
+      "~/*": ["./*"],
+      "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
   "include": [
