--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.4.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.13",
+    "@types/mdx": "^2.0.6",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
     "cypress": "^12.17.3",
     "eslint-config-next": "13.4.12",
     "eslint-config-prettier": "^8.10.0",
@@ -28,7 +33,12 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.10.0",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "server-only": "^0.0.1",
+    "shiki": "^0.14.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "theme-change": "^2.5.0",
