--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -71,7 +71,7 @@ jobs:
     strategy:
       fail-fast: false # https://github.com/cypress-io/github-action/issues/48
       matrix:
-        node-version: [16, 18, 20] # Uses 2 parallel instances
+        containers: [1, 2, 3] # Uses 2 parallel instances
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -112,7 +112,7 @@ jobs:
     strategy:
       fail-fast: false # https://github.com/cypress-io/github-action/issues/48
       matrix:
-        node-version: [16, 18, 20] # Uses 2 parallel instances
+        containers: [1, 2, 3] # Uses 2 parallel instances
     steps:
       - name: Checkout
         uses: actions/checkout@v3
